--- a/src/main/resources/templates/addtraineruser.html
+++ b/src/main/resources/templates/addtraineruser.html
@@ -2,11 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Add user</title>
+    <title>Add trainer user</title>
 </head>
 <body>
-<h3>Dodaj nowego użytkownika:</h3>
-<form method="post" th:action="@{/adduser}" th:object="${userdto}">
+<h3>Dodaj nowego prowadzącego:</h3>
+<form method="post" th:action="@{/addtraineruser}" th:object="${userdto}">
     <label for="loginInput">Nazwa użtkownika:</label>
     <input id="loginInput" type="text" th:field="*{login}"><br><br>
     <label for="passwordInput">Hasło:</label>
@@ -15,6 +15,11 @@
     <input id="firstNameInput" type="text" th:field="*{firstName}"><br><br>
     <label for="lastNameInput">Nazwisko:</label>
     <input id="lastNameInput" type="text" th:field="*{lastName}"><br><br>
+    <label for="isActiveSelect">Aktywność konta:</label>
+    <select id="isActiveSelect" th:field="*{isActive}">
+        <option th:value="true" selected>Aktywne</option>
+        <option th:value="false">Nieaktywne</option>
+    </select>
     <div>
         <button type="submit">Dodaj</button>
     </div>
