--- a/src/main/resources/templates/registerstudentuser.html
+++ b/src/main/resources/templates/registerstudentuser.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>TMS - Add trainer user</title>
+    <title>TMS - All trainer users</title>
     <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/4.5.3/css/bootstrap.min.css}"/>
     <link th:rel="stylesheet" th:href="@{style.css}"/>
     <script th:src="@{/webjars/jquery/3.5.1/jquery.min.js}"></script>
@@ -13,13 +13,12 @@
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a th:href="@{/}" th:text="home"></a></li>
-        <li class="breadcrumb-item active" aria-current="page" th:text="addtraineruser"></li>
+        <li class="breadcrumb-item active" aria-current="page" th:text="registerstudentuser"></li>
     </ol>
 </nav>
-
-<h3>Dodaj nowego prowadzącego:</h3>
+<h3>Rejestracja nowego uczestnika:</h3>
 <div class="form">
-    <form method="post" th:action="@{/addtraineruser}" th:object="${traineruserdto}">
+    <form method="post" th:action="@{/registerstudentuser}" th:object="${studentuserdto}">
         <div class="form-group row">
             <label class="col-sm-2 col-form-label" for="loginInput">Nazwa użtkownika:</label>
             <div class="col-sm-10">
@@ -42,15 +41,6 @@
             <label class="col-sm-2 col-form-label" for="lastNameInput">Nazwisko:</label>
             <div class="col-sm-10">
                 <input class="form-control" id="lastNameInput" type="text" th:field="*{lastName}">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label" for="isActiveSelect">Aktywność konta:</label>
-            <div class="col-sm-10">
-                <select class="form-control" id="isActiveSelect" th:field="*{isActive}">
-                    <option th:value="true" selected>Aktywne</option>
-                    <option th:value="false">Nieaktywne</option>
-                </select>
             </div>
         </div>
         <div class="form-group row">
