--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>TMS - Training Mangament System</title>
+    <title>TMS - Training Management System</title>
     <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/4.5.3/css/bootstrap.min.css}"/>
     <link th:rel="stylesheet" th:href="@{style.css}"/>
     <script th:src="@{/webjars/jquery/3.5.1/jquery.min.js}"></script>
