--- a/src/main/resources/templates/trainerusers.html
+++ b/src/main/resources/templates/trainerusers.html
@@ -25,7 +25,7 @@
         <th scope="col">Login</th>
         <th scope="col">Imię</th>
         <th scope="col">Nazwisko</th>
-        <th scope="col">Status</th>
+        <th scope="col">Status konta</th>
         <th scope="col">Typ konta</th>
         <th scope="col"></th>
     </tr>
