- add overloaded method encodeUserPassword for studentUserDTO - add studentUserDTO class - add studentUserMapper with mapDtoToEntity method - modofication in UserService class - change method registerStudentUser to use StudentUserDTO objects - some frontend text improvements

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,8 +18,8 @@
 
 <h1>Panel użytkownika</h1>
 
-<a class="btn btn-primary btn-lg" th:href="@{/addtraineruser}">Dodaj trenera</a>
-<a class="btn btn-primary btn-lg" th:href="@{/trainerusers}">Lista trenerów</a>
+<a class="btn btn-primary btn-lg" th:href="@{/addtraineruser}">Dodaj prowadzącego</a>
+<a class="btn btn-primary btn-lg" th:href="@{/trainerusers}">Lista prowadzących</a>
 <a class="btn btn-primary btn-lg" th:href="@{/registerstudentuser}">Rejestracja nowego uczestnika</a>
 
 </body>
