--- a/src/main/resources/templates/trainerusers.html
+++ b/src/main/resources/templates/trainerusers.html
@@ -16,7 +16,7 @@
         <li class="breadcrumb-item active" aria-current="page" th:text="trainerusers"></li>
     </ol>
 </nav>
-<h3>Lista trenerów:</h3>
+<h3>Lista prowadzących:</h3>
 
 <table class="table table-hover">
     <thead>
