- add StudentUsers endpoint + engine

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,6 +21,8 @@
 <a class="btn btn-primary btn-lg" th:href="@{/addtraineruser}">Dodaj prowadzącego</a>
 <a class="btn btn-primary btn-lg" th:href="@{/trainerusers}">Lista prowadzących</a>
 <a class="btn btn-primary btn-lg" th:href="@{/registerstudentuser}">Rejestracja nowego uczestnika</a>
+<a class="btn btn-primary btn-lg" th:href="@{/studentusers}">Lista uczestników</a>
+
 
 </body>
 </html>
