--- a/src/main/resources/templates/studentusers.html
+++ b/src/main/resources/templates/studentusers.html
@@ -13,10 +13,11 @@
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a th:href="@{/}" th:text="home"></a></li>
-        <li class="breadcrumb-item active" aria-current="page" th:text="trainerusers"></li>
+        <li class="breadcrumb-item active" aria-current="page" th:text="studentusers"></li>
     </ol>
 </nav>
-<h3>Lista prowadzących:</h3>
+
+<h3>Lista zarejestrowanych uczestników:</h3>
 
 <table class="table table-hover">
     <thead>
@@ -31,15 +32,15 @@
     </tr>
     </thead>
     <tbody>
-    <tr th:each="trainerUser : ${listOfAllTrainerUsers}">
-        <th scope="row" th:text="${trainerUserStat.index+1}"></th>
-        <th scope="row" th:text="${trainerUser.login}"></th>
-        <th scope="row" th:text="${trainerUser.firstName}"></th>
-        <th scope="row" th:text="${trainerUser.lastName}"></th>
-        <th scope="row" th:text="${trainerUser.isActive}"></th>
-        <th scope="row" th:text="${trainerUser.userTypeDescription}"></th>
+    <tr th:each="studentUser : ${listOfAllStudentUsers}">
+        <th scope="row" th:text="${studentUserStat.index+1}"></th>
+        <th scope="row" th:text="${studentUser.login}"></th>
+        <th scope="row" th:text="${studentUser.firstName}"></th>
+        <th scope="row" th:text="${studentUser.lastName}"></th>
+        <th scope="row" th:text="${studentUser.isActive}"></th>
+        <th scope="row" th:text="${studentUser.userTypeDescription}"></th>
         <th scope="row"><a class="btn btn-secondary btn-lg"
-                           th:href="@{/trainerusers/{id}/delete(id=${trainerUser.id})}">Usuń</a></th>
+                           th:href="@{/studentusers/{id}/delete(id=${studentUser.id})}">Usuń</a></th>
     </tr>
     </tbody>
 </table>
