- renamed template registerstudentuser.html to addstudentuser.html - created applyfortraining.html template - created TrainingEntity + repository + service - created TrainingApplicationEntity + repository + service - prepared BlockEntity and ClassesEntity classes (for future development) - in UserEntity class added field witch Set of TrainingApplications (Entities) + getter and setter and modified constructor - added repository annotation in UserRepository interface - renamed methods registerStudentUser() to createUserStudent() in UserService class - added column trainings in studentuser.html template + list of trainings - added List of appliedTrainingsNames (String) and appliedTrainingsIds (Long) to StudentUserDTO class - added List of applies to StudentUserMapper class - expansion of the InitialDataServce class - added button to endpoint applyfortraining in index.html template - changed endpoint name of registerstudentuser in index.html template - added endpoints for apply for training in FrontendController - changed name of registerstudentuser endpoint in FrontendController

--- a/src/main/resources/templates/addstudentuser.html
+++ b/src/main/resources/templates/addstudentuser.html
@@ -13,12 +13,12 @@
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a th:href="@{/}" th:text="home"></a></li>
-        <li class="breadcrumb-item active" aria-current="page" th:text="registerstudentuser"></li>
+        <li class="breadcrumb-item active" aria-current="page" th:text="addstudentuser"></li>
     </ol>
 </nav>
 <h3>Rejestracja nowego uczestnika:</h3>
 <div class="form">
-    <form method="post" th:action="@{/registerstudentuser}" th:object="${studentuserdto}">
+    <form method="post" th:action="@{/addstudentuser}" th:object="${studentuserdto}">
         <div class="form-group row">
             <label class="col-sm-2 col-form-label" for="loginInput">Nazwa użtkownika:</label>
             <div class="col-sm-10">
