--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,8 +20,9 @@
 
 <a class="btn btn-primary btn-lg" th:href="@{/addtraineruser}">Dodaj prowadzącego</a>
 <a class="btn btn-primary btn-lg" th:href="@{/trainerusers}">Lista prowadzących</a>
-<a class="btn btn-primary btn-lg" th:href="@{/registerstudentuser}">Rejestracja nowego uczestnika</a>
+<a class="btn btn-primary btn-lg" th:href="@{/addstudentuser}">Dodaj uczestnika</a>
 <a class="btn btn-primary btn-lg" th:href="@{/studentusers}">Lista uczestników</a>
+<a class="btn btn-primary btn-lg" th:href="@{/applyfortraining}">Rejestracja nowego uczestnika</a>
 
 
 </body>
