--- a/src/main/resources/templates/applyfortraining.html
+++ b/src/main/resources/templates/applyfortraining.html
@@ -19,38 +19,38 @@
 
 <h3>Zapisz się na szkolenie:</h3>
 <div class="form">
-    <form method="post" th:action="@{/applyfortraining}" th:object="${application}">
+    <form method="post" th:action="@{/applyfortraining}" th:object="${applicationdto}">
         <div class="form-group row">
             <label class="col-sm-2 col-form-label" for="trainingSelect">Wynierz kurs:</label>
             <div class="col-sm-10">
-                <select class="form-control" id="trainingSelect" th:field="*{training}">
-                    <option th:each="training : ${trainings}" th:value="${training.getId()}"
-                            th:text="${training.getName()}"></option>
+                <select class="form-control" id="trainingSelect" th:field="*{trainingId}">
+                    <option th:each="training : ${trainings}" th:value="${training.id}"
+                            th:text="${training.name}"></option>
                 </select>
             </div>
         </div>
         <div class="form-group row">
             <label class="col-sm-2 col-form-label" for="loginInput">Nazwa użtkownika:</label>
             <div class="col-sm-10">
-                <input class="form-control" id="loginInput" type="text" th:field="*{user.login}">
+                <input class="form-control" id="loginInput" type="text" th:field="*{studentUserDTO.login}">
             </div>
         </div>
         <div class="form-group row">
             <label class="col-sm-2 col-form-label" for="passwordInput">Hasło:</label>
             <div class="col-sm-10">
-                <input class="form-control" id="passwordInput" type="password" th:field="*{user.password}">
+                <input class="form-control" id="passwordInput" type="password" th:field="*{studentUserDTO.password}">
             </div>
         </div>
         <div class="form-group row">
             <label class="col-sm-2 col-form-label" for="firstNameInput">Imię:</label>
             <div class="col-sm-10">
-                <input class="form-control" id="firstNameInput" type="text" th:field="*{user.firstName}">
+                <input class="form-control" id="firstNameInput" type="text" th:field="*{studentUserDTO.firstName}">
             </div>
         </div>
         <div class="form-group row">
             <label class="col-sm-2 col-form-label" for="lastNameInput">Nazwisko:</label>
             <div class="col-sm-10">
-                <input class="form-control" id="lastNameInput" type="text" th:field="*{user.lastName}">
+                <input class="form-control" id="lastNameInput" type="text" th:field="*{studentUserDTO.lastName}">
             </div>
         </div>
         <div class="form-group row">
