--- a/src/main/resources/static/styles/signin.css
+++ b/src/main/resources/static/styles/signin.css
@@ -4,20 +4,13 @@ body {
 }
 
 body {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-align: center;
-    align-items: center;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    background-color: #f5f5f5;
+
 }
 
 .form-signin {
     width: 100%;
     max-width: 330px;
-    padding: 15px;
-    margin: auto;
+    margin: 10px auto;
 }
 .form-signin .checkbox {
     font-weight: 400;
@@ -41,4 +34,13 @@ body {
     margin-bottom: 10px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
+}
+.container {
+    width: auto;
+    max-width: 680px;
+    padding: 0 15px;
+}
+
+.footer {
+    background-color: #f5f5f5;
 }
