--- a/src/main/resources/templates/applyfortraining.html
+++ b/src/main/resources/templates/applyfortraining.html
@@ -2,63 +2,83 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>TMS - Add trainer user</title>
+    <title>TMS - Training Management System</title>
     <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/4.5.3/css/bootstrap.min.css}"/>
-    <link th:rel="stylesheet" th:href="@{style.css}"/>
+    <link th:rel="stylesheet" th:href="@{/styles/style.css}"/>
     <script th:src="@{/webjars/jquery/3.5.1/jquery.min.js}"></script>
     <script th:src="@{/webjars/popper.js/1.16.0/umd/popper.min.js}"></script>
     <script th:src="@{/webjars/bootstrap/4.5.3/js/bootstrap.min.js}"></script>
 </head>
 <body>
-<nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a th:href="@{/}" th:text="home"></a></li>
-        <li class="breadcrumb-item active" aria-current="page" th:text="applyfortraining"></li>
-    </ol>
+<nav class="navbar sticky-top navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" th:href="@{/}" title="Training Management System">
+            <img src="/img/tms-logo_200x200.png" width="30" height="30" class="d-inline-block align-top" alt=""
+                 loading="lazy">
+            TMS - Training Management System
+        </a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+            </ul>
+        </div>
+    </nav>
+    <a class="btn btn-outline-primary" th:href="@{/login}" role="button">Zaloguj się</a>
 </nav>
 
-<h3>Zapisz się na szkolenie:</h3>
-<div class="form">
-    <form method="post" th:action="@{/applyfortraining}" th:object="${applicationdto}">
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label" for="trainingSelect">Wynierz kurs:</label>
-            <div class="col-sm-10">
-                <select class="form-control" id="trainingSelect" th:field="*{trainingId}">
-                    <option th:each="training : ${trainings}" th:value="${training.id}"
-                            th:text="${training.name}"></option>
-                </select>
-            </div>
+<div class="content">
+    <div class="reg_form_wrapper">
+        <h2 class="text-center">Zapisz się na szkolenie:</h2>
+        <div class="form">
+            <form method="post" th:action="@{/applyfortraining}" th:object="${applicationdto}">
+                <div class="form-group row">
+                    <label class="col-sm-4 col-form-label" for="trainingSelect">Wybierz kurs:</label>
+                    <div class="col-sm-8">
+                        <select class="form-control" id="trainingSelect" th:field="*{trainingId}">
+                            <option th:each="training : ${trainings}" th:value="${training.id}"
+                                    th:text="${training.name}"></option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-4 col-form-label" for="loginInput">Nazwa użtkownika:</label>
+                    <div class="col-sm-8">
+                        <input class="form-control" id="loginInput" type="text" th:field="*{studentUserDTO.login}">
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-4 col-form-label" for="passwordInput">Hasło:</label>
+                    <div class="col-sm-8">
+                        <input class="form-control" id="passwordInput" type="password"
+                               th:field="*{studentUserDTO.password}">
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-4 col-form-label" for="firstNameInput">Imię:</label>
+                    <div class="col-sm-8">
+                        <input class="form-control" id="firstNameInput" type="text"
+                               th:field="*{studentUserDTO.firstName}">
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-4 col-form-label" for="lastNameInput">Nazwisko:</label>
+                    <div class="col-sm-8">
+                        <input class="form-control" id="lastNameInput" type="text"
+                               th:field="*{studentUserDTO.lastName}">
+                    </div>
+                </div>
+                <div class="form-group row text-right">
+                    <div class="col-sm-12 ">
+                        <button type="submit" class="btn btn-primary btn-lg">Wyślij</button>
+                    </div>
+                </div>
+            </form>
         </div>
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label" for="loginInput">Nazwa użtkownika:</label>
-            <div class="col-sm-10">
-                <input class="form-control" id="loginInput" type="text" th:field="*{studentUserDTO.login}">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label" for="passwordInput">Hasło:</label>
-            <div class="col-sm-10">
-                <input class="form-control" id="passwordInput" type="password" th:field="*{studentUserDTO.password}">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label" for="firstNameInput">Imię:</label>
-            <div class="col-sm-10">
-                <input class="form-control" id="firstNameInput" type="text" th:field="*{studentUserDTO.firstName}">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label" for="lastNameInput">Nazwisko:</label>
-            <div class="col-sm-10">
-                <input class="form-control" id="lastNameInput" type="text" th:field="*{studentUserDTO.lastName}">
-            </div>
-        </div>
-        <div class="form-group row">
-            <div class="col-sm-10">
-                <button type="submit" class="btn btn-primary btn-lg">Dodaj</button>
-            </div>
-        </div>
-    </form>
+    </div>
 </div>
+<footer class="footer">
+    <div class="container">
+        <span class="text-muted">&copy; 2021</span>
+    </div>
+</footer>
 </body>
 </html>
