- added function add & remove training + front thymeleaf template + backend - added trainings to navbar - updated SecurityConfig - added validation dependency - fixed null pointer in TrainingMapper class - changed name of String field userTypeDescription to userType + UserMapper class update - change reference UserMapper to TrainerUserMapper in UserService class

--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -14,12 +14,18 @@
                 <li class="nav-item" sec:authorize="hasAuthority('ADMIN')">
                     <a class="nav-link" th:href="@{/studentusers}">Uczestnicy</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/trainings}">Kursy</a>
+                </li>
             </ul>
         </div>
     </nav>
     <form class="form-inline" th:action="@{/logout}" method="post">
-        <span class="navbar-text mr-2"><span sec:authentication="name">Login</span><span sec:authentication="principal.authorities">[ROLE_USER, ROLE_TRAINER, ROLE_ADMIN]</span>
-</span>
+        <span class="navbar-text mr-2">
+            <span sec:authentication="name">Login</span>
+            <span sec:authentication="principal.authorities">[USER], [TRAINER], [ADMIN]</span>
+
+        </span>
         <button class="btn btn-outline-primary" type="submit">Wyloguj</button>
     </form>
 </nav>
