- the FrontendController were separated - adde edit form in training endpoint - changed paths in Mappings method

--- a/src/main/resources/templates/trainerusers.html
+++ b/src/main/resources/templates/trainerusers.html
@@ -84,7 +84,7 @@
                            th:href="@{/trainerusers/{id}/delete(id=${trainerUser.id})}">Zmień hasło</a></li>
 -->
                     <li><a class="btn btn-outline-danger btn-sm"
-                           th:href="@{/trainerusers/{id}/delete(id=${trainerUser.id})}">Usuń</a></li>
+                           th:href="@{/trainerusers/delete/{id}(id=${trainerUser.id})}">Usuń</a></li>
                 </ul>
             </th>
         </tr>
