--- a/src/main/resources/templates/studentusers.html
+++ b/src/main/resources/templates/studentusers.html
@@ -83,7 +83,7 @@
                            th:href="@{/studentusers/{id}/delete(id=${studentUser.id})}">Zmień hasło</a></li>
 -->
                     <li><a class="btn btn-outline-danger btn-sm"
-                           th:href="@{/studentusers/{id}/delete(id=${studentUser.id})}">Usuń</a></li>
+                           th:href="@{/studentusers/delete/{id}(id=${studentUser.id})}">Usuń</a></li>
                 </ul>
             </th>
         </tr>
