--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -14,7 +14,7 @@
                 <li class="nav-item" sec:authorize="hasAuthority('ADMIN')">
                     <a class="nav-link" th:href="@{/studentusers}">Uczestnicy</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN','TRAINER')">
                     <a class="nav-link" th:href="@{/trainings}">Kursy</a>
                 </li>
             </ul>
