- fixed paths to fragments templates

--- a/src/main/resources/templates/addstudentuser.html
+++ b/src/main/resources/templates/addstudentuser.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="/fragments/head :: head"></head>
+<head th:replace="fragments/head :: head"></head>
 <body>
-<nav th:replace="/fragments/navigation :: nav"></nav>
+<nav th:replace="fragments/navigation :: nav"></nav>
 
 <h3>Rejestracja nowego uczestnika:</h3>
 <div class="form">
