--- a/src/main/resources/templates/trainings.html
+++ b/src/main/resources/templates/trainings.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="/fragments/head :: head"></head>
+<head th:replace="fragments/head :: head"></head>
 <body>
-<nav th:replace="/fragments/navigation :: nav"></nav>
+<nav th:replace="fragments/navigation :: nav"></nav>
 <div class="content">
 
     <div sec:authorize="hasAuthority('ADMIN')">
@@ -40,6 +40,6 @@
     </table>
 </div>
 
-<nav th:replace="/fragments/footer :: footer"></nav>
+<nav th:replace="fragments/footer :: footer"></nav>
 </body>
 </html>
